@@ -1,3 +1,8 @@
+[B]1.1.0:[/B]
+- podpora Kodi 19
+- pridane vyhladavanie (by jastrab)
+- oprava stahovania (by jastrab)
+- oprava prehravania  (by jastrab)
 [B]1.0.6:[/B]
 - oprava prehravania (by jose1711)
 [B]1.0.4:[/B]
